syntax = "proto3";

package raft;

service Raft {
    rpc RequestVote (VoteRequest) returns (VoteResponse);
    rpc AppendEntries (AppendRequest) returns (AppendResponse);
    rpc ClientRequest (ClientOperation) returns (ClientResponse);
}

message VoteRequest {
    int32 term = 1;
    int32 candidateId = 2;
}

message VoteResponse {
    int32 term = 1;
    bool voteGranted = 2;
}

message LogEntry {
    string operation = 1;
    int32 term = 2;
    int32 index = 3;
}

message AppendRequest {
    int32 term = 1;
    int32 leaderId = 2;
    repeated LogEntry entries = 3;
    int32 commitIndex = 4;
}

message AppendResponse {
    int32 term = 1;
    bool success = 2;
}

message ClientOperation {
    string operation = 1;
}

message ClientResponse {
    bool success = 1;
    string message = 2;
}
